# socket-sessions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
inc/: buffer_chain.h  buffer_link.h  socket_buffer.h  socket_data.h  socket_error.h  socket_listener.h  socket_manager.h  socket_session.h  socket_session_pool.h  socket_wrapper.h
main/: CMakeLists.txt
src/: buffer_chain.c  buffer_link.c  socket_buffer.c  socket_data.c  socket_listener.c  socket_manager.c  socket_session.c  socket_session_pool.c  socket_session_tls.c  socket_wrapper.c
test/: CMakeLists.txt  buffer_chain.c  buffer_link.c  certs.h  http.c  https_client.c  socket_buffer.c  socket_closure_requested.c  socket_data.c  socket_session.c  socket_session_hangup.c  socket_session_resolve_ipv4.c  socket_timeout.c  test.h  wolfssl_example.c  wolfssl_https.c
